k8s/manifests/angine-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angine-site
  namespace: angine-site
spec:
  type: ClusterIP
  selector:
    app: angine-site
  ports:
    - port: 80
      targetPort: 80
